--- a/src/containers/apps/themes.scss
+++ b/src/containers/apps/themes.scss
@@ -28,14 +28,14 @@
 }
 
 .youtube-wrapper{
-  --app-bg: #ffffff;
+  --app-bg: #fefefe;
   --pm-txt: #121212;
   background: var(--app-bg);
   // color: #fefefe;
 }
 
 .youtube-viewport{
-  --app-bg: #ffffff;
+  --app-bg: #fefefe;
   --statusbg: var(--app-bg);
   --navbg: var(--app-bg);
 }
