--- a/src/containers/apps/youtube/youtube.scss
+++ b/src/containers/apps/youtube/youtube.scss
@@ -1,4 +1,5 @@
 .youtube-home {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,9 +26,17 @@
 }
 
 .yt-bottom-nav {
-  padding: 0.5em 2em;
+  padding: 0.5em;
   color: var(--med-txt);
   align-items: center;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  transition: transform 200ms ease-in-out;
+
+  &[data-hide="true"]{
+    transform: translateY(60px);
+    pointer-events: none;
+  }
 
   .uicon {
     font-size: 0.7em;
@@ -140,43 +149,47 @@
   }
 }
 
+.ch-text-all {
+  padding-left: 1em;
+  padding-right: 0.5em;
+  font-size: 0.8em;
+  color: #125dc2;
+}
+
 .yt-subs-container {
   display: flex;
   align-items: center;
-  padding: 0.5em 0;
+  padding: 0 0.25em;
+  margin-bottom: 0.5em;
 
-  .yt-channels-sc{
+  .yt-channels-sc {
     flex-grow: 1;
     overflow-x: scroll;
 
-    .yt-ch-body{
+    .yt-ch-body {
       display: flex;
       width: max-content;
     }
-  }
-
-  .ch-text-all{
-    padding-left: 1em;
-    padding-right: 0.5em;
-    font-size: 0.8em;
-    color: #125dc2;
   }
 
   .yt-channel {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 0.5em;
+    padding: 0.5em 0.5em 0.25em;
     box-sizing: border-box;
+
+    &[data-state="1"] {
+      background: rgba(74, 124, 224, 0.5);
+    }
+
+    &[data-state="2"] {
+      opacity: 0.25;
+    }
 
     .ch-name {
       max-width: 48px;
       font-size: 0.64em;
-      display: -webkit-box;
-      -webkit-line-clamp: 1;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-      text-overflow: ellipsis;
       text-align: center;
     }
 
@@ -184,5 +197,49 @@
       border-radius: 2em;
       overflow: hidden;
     }
+  }
+}
+
+.yt-his-container {
+  margin-top: 0.5em;
+
+  .yt-his-title {
+    padding: 0.25em 0.5em;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .yt-his-vids {
+    width: 100%;
+    overflow-x: scroll;
+  }
+
+  .yt-his-scbody {
+    width: max-content;
+    display: flex;
+  }
+
+  .yt-his-vid {
+    width: 8em;
+    margin: 0 0.5em;
+
+    .his-vid-title {
+      max-height: 48px;
+      -webkit-line-clamp: 2;
+      font-size: 0.72em;
+    }
+
+    .his-chname {
+      color: var(--med-txt);
+      font-weight: 400;
+      font-size: 0.64em;
+    }
+  }
+}
+
+.yt-lib-cont {
+  color: var(--med-txt);
+  .yt-lib-icon svg{
+    fill: var(--med-txt);
   }
 }
