--- a/src/containers/apps/themes.scss
+++ b/src/containers/apps/themes.scss
@@ -39,3 +39,16 @@
   --statusbg: var(--app-bg);
   --navbg: var(--app-bg);
 }
+
+
+.google-wrapper{
+  --app-bg: #fefefe;
+  background: var(--app-bg);
+}
+
+.google-viewport{
+  --app-bg: #fefefe;
+
+  --statusbg: var(--app-bg);
+  --navbg: var(--app-bg);
+}
